[workspace]
resolver = "2"
members = [
    "programs/associated-token-account",
    "programs/system",
    "programs/token",
    "sdk/log/crate",
    "sdk/log/macro",
    "sdk/pinocchio",
    "sdk/pubkey",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anza-xyz/pinocchio"

[workspace.dependencies]
five8_const = "0.1.3"
pinocchio = { path = "sdk/pinocchio", version = ">= 0.6" }
pinocchio-pubkey = { path = "sdk/pubkey", version = "0.2" }

[workspace.metadata.cli]
solana = "2.1.0"

[workspace.metadata.toolchains]
build = "1.81.0"
format = "nightly-2024-08-08"
lint = "nightly-2024-08-08"
test = "1.81.0"
