[workspace]
resolver = "2"
members = [
    "programs/associated-token-account",
    "programs/system",
    "programs/token",
    "sdk/cpi",
    "sdk/log/crate",
    "sdk/log/macro",
    "sdk/pinocchio",
    "sdk/pubkey",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anza-xyz/pinocchio"

[workspace.dependencies]
five8_const = "0.1.3"
pinocchio = { path = "sdk/pinocchio", version = ">= 0.6, <= 0.7" }
pinocchio-cpi = { path = "sdk/cpi", version = "0.1.0" }
pinocchio-pubkey = { path = "sdk/pubkey", version = "0.2.1" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(target_feature, values("static-syscalls"))',
] }
