[package]
name = "pinocchio-associated-token-account"
description = "Pinocchio helpers to invoke Associated Token Account program instructions"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-cpi = { workspace = true }
pinocchio-pubkey = { workspace = true }
