[package]
name = "pinocchio-associated-token"
description = "Pinocchio helpers to invoke Associated Token program instructions"
version = "0.2.1"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
