[package]
name = "pinocchio-system"
description = "Pinocchio helpers to invoke System program instructions"
version = "0.2.1"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
