[package]
name = "pinocchio-token"
description = "Pinocchio helpers to invoke Legacy Token and Token-2022 instructions"
version = "0.2.0"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
