[package]
name = "pinocchio-token"
description = "Pinocchio helpers to invoke Token program instructions"
version = "0.2.1"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }

[dependencies]
pinocchio = { workspace = true, version = ">= 0.6, <= 0.7" }
pinocchio-pubkey = { workspace = true }
