[package]
name = "pinocchio-token"
description = "Pinocchio helpers to invoke Token program instructions"
version = "0.2.1"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-cpi = { workspace = true }
pinocchio-pubkey = { workspace = true }
