[package]
name = "pinocchio"
description = "Create Solana programs with no dependencies attached"
version = "0.7.1"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }

[lib]
crate-type = ["rlib"]

[features]
std = []

[lints]
workspace = true
