[package]
name = "pinocchio-pubkey"
description = "Companion pubkey helpers for Pinocchio"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/febo/pinocchio"

[dependencies]
five8_const = "0.1.3"
pinocchio = { version="0.1.0", path="../pinocchio" }
