[package]
name = "pinocchio-log"
description = "Lightweight log utility for Solana programs"
version = "0.3.0"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio-log-macro = { version = "^0.3", path = "../macro", optional = true }

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[features]
default = ["macro"]
macro = ["dep:pinocchio-log-macro"]
