[package]
name = "pinocchio-log-macro"
description = "Macro for pinocchio log utility"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/febo/pinocchio"

[lib]
proc-macro = true

[dependencies]
quote = "^1.0"
syn = { version = "^1.0", features = ["extra-traits", "full"] }
